namespace java com.moseeker.thrift.gen.dao.struct.jobdb
namespace py thrift_gen.gen.dao.struct.jobdb


struct JobPositionCityDO {

	1: optional i32 pid,	//职位id
	2: optional i32 code	//城市code

}
